<resources>
    <string name="app_name">whatsapp-clone</string>
    <string name="textInputSenha">Digite sua Senha</string>
    <string name="textInputEmail">Digite seu Email</string>
    <string name="botaoLogar">logar</string>
    <string name="textNaoTemConta">Não tem conta? Cadastre-se</string>
    <string name="textInputNome">Digite seu nome</string>
    <string name="textBtnCadastrar">cadastrar</string>
    <string name="sucessoCadastroUsuario">Usuário cadastrado com sucesso!</string>
    <string name="erroCadastroUsuario">Erro ao cadastrar usuario!</string>
    <string name="erroCadastroUsuarioEmail">Por favor digite um email válido!</string>
    <string name="erroCadastroUsuarioSenha">Digite uma senha mais forte!</string>
    <string name="erroCadastroUsuarioExistente">Esse usuário já está cadastrado!</string>
    <string name="erroLoginUsuario">Usuario ou senha inválido!</string>
    <string name="textMenuPesquisar">Pesquisar</string>
    <string name="textMenuSair">sair</string>
    <string name="textMenuConfiguracoes">configurações</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="conversas">conversas</string>
    <string name="contatos">contatos</string>
    <string name="configuracoes">Configurações</string>
    <string name="inputUserName">nome de usuário </string>
    <string name="textMensagemNomeDeUsuario">Esse não é o seu nome de usuário nem sua senha. Esse nome ficará visível para seus contatos no Whatsapp-clone</string>
    <string name="permissaoNegada">Permissões Negadas</string>
    <string name="permissaoNegadaMessage">Para utilizar o app é necessário aceitar as permissões requeridas.</string>
    <string name="btnConfirmarPermissao">Confirmar</string>
</resources>